# quantum-siren

./: .gitignore  LICENSE  README.md  classical.ipynb  coefficients.py  eval_n_qubits_n_layers.sh  mlflow_cleanup.py  mlflow_viz.py  pyproject.toml  quantum.ipynb  siren.py  slurm_job.sh  unique_freqs.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
conf/base/: catalog.yml  globals.yml  logging.yml  parameters_postprocessing.yml  parameters_preprocessing.yml  parameters_training.yml
conf/base/parameters/: postprocessing.yml  preprocessing.yml  training.yml
docs/: .$quantum_siren.drawio.bkp  quantum_siren.drawio
docs/source/: conf.py  index.rst
notebooks/: classical.ipynb  helpers.py  quantum.ipynb  signalprocessing.ipynb  siren.py
src/: requirements-cpu.in  requirements-cpu.txt  requirements-gpu.in  requirements.in  requirements.txt  setup.py
src/quantum_siren/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/quantum_siren/helpers/: colors.py  dataset.py  visualization.py
src/quantum_siren/pipelines/postprocessing/: README.md  __init__.py  nodes.py  pipeline.py
src/quantum_siren/pipelines/preprocessing/: README.md  __init__.py  nodes.py  pipeline.py
src/quantum_siren/pipelines/training/: README.md  __init__.py  ansaetze.py  models.py  nodes.py  optimizer.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/postprocessing/: test_pipeline.py
src/tests/pipelines/preprocessing/: test_pipeline.py
src/tests/pipelines/training/: test_pipeline.py
