[tool.poetry]
name = "quantum-siren"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.extras]
gpu=["torchvision"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pennylane = "^0.31.0"
pillow = "^10.0.0"
scikit-image = "^0.21.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.2"
torch = [
#    {version = "2.0.1", source = "torch_gpu", markers = "extra == 'gpu'"},
    {version = "2.0.1+cpu", source = "torch_cpu", markers = "extra != 'gpu'"}
]
torchvision = [
#    {version = "0.15.2", source = "torch_gpu", markers = "extra == 'gpu'"},
    {version = "0.15.2+cpu", source = "torch_cpu", markers = "extra != 'gpu'"}
]
kedro = "^0.18.12"
torchsummary = "^1.5.1"
torchmetrics = "^1.0.2"
kedro-mlflow = "^0.11.9"
plotly = "^5.15.0"
black = "^23.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "quantum_siren"
project_name = "quantum_siren"
kedro_init_version = "0.18.12"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/quantum_siren -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
