[tool.poetry]
name = "quantum-siren"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.extras]
gpu=["torchvision"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pennylane = "^0.33.1"
pillow = "^10.1.0"
scikit-image = "^0.21.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.2"
torch = [
# Uncomment the following line once this issue is resolved: https://github.com/python-poetry/poetry/issues/7748 # noqa
#    {version = "2.1.0", source = "torch_gpu", markers = "extra == 'gpu'"},
    {version = "2.1.0+cpu", source = "torch_cpu", markers = "extra != 'gpu'"}
]
torchvision = "^0.16.0"
kedro = "^0.18.12"
torchsummary = "^1.5.1"
torchmetrics = "^1.0.2"
kedro-mlflow = "^0.11.9"
plotly = "^5.15.0"
black = "^23.9.1"
mlflow = "^2.9.1"
pyarrow = "^14.0.1"
gitpython = "^3.1.40"
scipy = "^1.11.4"
urllib3 = "^2.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "quantum_siren"
project_name = "quantum_siren"
kedro_init_version = "0.18.12"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/quantum_siren -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
