[tool.poetry]
name = "quantum-siren"
version = "0.1.0"
description = ""
authors = ["lc3267 <melvin.strobl@kit.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "torch_gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "quantum"
url = "https://ea3a0fbb-599f-4d83-86f1-0e71abe27513.ka.bw-cloud-instance.org/lc3267/quantum/+simple/"
priority = "supplemental"

[tool.poetry.extras]
gpu=["torchvision"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pennylane = "^0.36.0"
pillow = "^10.3.0"
scikit-image = "^0.21.0"
ipykernel = "^6.25.0"
matplotlib = "^3.7.2"
torch = [
# Uncomment the following line once this issue is resolved: https://github.com/python-poetry/poetry/issues/7748 # noqa
#    {version = "2.1.0", source = "torch_gpu", markers = "extra == 'gpu'"},
    {version = "2.1.0+cpu", source = "torch_cpu", markers = "extra != 'gpu'"}
]
torchvision = "^0.16.0"
kedro = "^0.19.5"
torchsummary = "^1.5.1"
torchmetrics = "^1.0.2"
kedro-mlflow = "^0.12.2"
plotly = "^5.15.0"
black = "^24.4.2"
kaleido = "0.2.1"
qml-essentials = {version = "^0.1.0", source = "quantum"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "quantum_siren"
project_name = "quantum_siren"
kedro_init_version = "0.19.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/quantum_siren -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
